# codex-model-proxy

./: .env.example  .gitignore  README.md  pyproject.toml
src/codex_claude_code_proxy/: __init__.py  active_model.py  claude_cli.py  cli.py  mcp_server.py  model_cli.py  proxy_control.py  responses.py  server.py
src/codex_model_proxy/: __init__.py  active_model.py  antigravity_cli.py  claude_cli.py  cli.py  cursor_agent.py  errors.py  gemini_cli.py  grok_cli.py  headless_cli.py  mcp_server.py  model_cli.py  model_clients.py  openai_codex_cli.py  openai_responses.py  proxy_control.py  responses.py  server.py
src/codex_model_proxy/providers/: __init__.py  antigravity_cli.py  base.py  claude_code.py  cursor_agent.py  gemini_cli.py  grok_cli.py  openai_codex_cli.py  openai_responses.py  registry.py
tests/: test_claude_cli.py  test_mcp_server.py  test_model_runners.py  test_responses.py
