[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-model-proxy"
version = "0.1.0"
description = "Local OpenAI Responses-compatible proxy for subscription-backed model runners."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Michael Boeding" }
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0"
]

[project.scripts]
codex-model-proxy = "codex_model_proxy.cli:main"
codex-model-proxyctl = "codex_model_proxy.model_cli:main"
codex-model-proxy-mcp = "codex_model_proxy.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
